--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "redis": "^4.7.0",
+    "toad-scheduler": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
